Thanks to Dave Glowacki for suggestions on convenience methods in WebResponse and WebLink,
                        and for correcting my set up of the https protocol handling.
Thanks to Perry Doell for the methods to examine cookies on WebConversation
Thanks to Ken Hygh for the proper handling of parameters with no specified type 

Revision History:
 5-Oct-00
Problems corrected:
    1. Blank "src" attributes in FRAME nodes now correctly result in a blank page
    2. The "_self" target is now handled as the default target
    
 4-Oct-00
Additions:
    1. Frames are now supported. The WebConversation method has two methods: getFrameNames and getFrameContents which
       allow manipulation of frames.
    2. Calling HttpUnitOptions.setImagesTreatedAsAltText( true ) will cause the ALT text in images to be treated as ordinary
       text
       
Problems corrected:
    1. It is no longer necessary to edit the java.security file to enable HTTPS support. Just install the JSSE jars
       in your classpath.
    2. Parameters with no type specified are now properly handled as text
    

28-Sep-00
Additions:
    1. PseudoServer class is now used by unit tests to handle requests. This will enable development of frames capability
    2. Https support is now built in; however, it depends on the JSSE extension (not included). 
       See http://java.sun.com/products/jsse and be careful to follow the installation instructions
    
25-Sep-00
Problems corrected:
    1. In the 15-Sep build, the value parameter for checkboxes was ignored in computing defaults and validating
       parameter values - all checkboxes were assumed to have the value 'on' only
    2. getTableStartingWith[Prefix] only checked the nested tables in cell (0,0) of each outer table

Additions:
    3. WebConversation now supports getCookieNames and getCookieValue to return the current cookies  

15-Sep-00

General:
    1. Non-breaking spaces are converted to spaces on any conversion to text